results/SVCOMP/2-shot/log-assert1-2024_03_18_23_00_28.txt
import java.util.Random;

class assert1 {
    //@ ensures i >= 10 ==> i >= 10 : "my super assertion";
    //@ ensures i >= 20 ==> i >= 10 : "my super assertion";
    public static void func() {
        int i = new Random().nextInt();

        if (i >= 10) assert i >= 10 : "my super assertion"; // should hold

        if (i >= 20) assert i >= 10 : "my super assertion"; // should hold
    }
}
/home/max/Documents/JMLGPT/tmp/assert1.java:4: error: Incorrectly formed or terminated ensures statement near here
    //@ ensures i >= 10 ==> i >= 10 : "my super assertion";
                                    ^
/home/max/Documents/JMLGPT/tmp/assert1.java:5: error: Incorrectly formed or terminated ensures statement near here
    //@ ensures i >= 20 ==> i >= 10 : "my super assertion";
                                    ^
2 errors

